<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Contact Viewer</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_edit_contact">Edit Contact</string>
    <string name="title_activity_contact_detail">Contact Detail</string>
    <string name="action_add_contact">Add</string>
    <string name="action_close">Close</string>
    <string name="title_activity_detail">Contact Detail</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete_all">Delete All</string>
    <string name="title_activity_contact_edit">Edit Contact</string>
    <string name="title_activity_add_contact">Add Contact</string>
    <string name="title_activity_delete_contact">Delete Contact</string>
    <string name="hint_name">Name</string>
    <string name="hint_title">Title</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_email">Email</string>
    <string name="hint_twitterid">TwitterId</string>
    <string name="button_save">Save</string>
    <string name="button_delete">Delete</string>
    <string name="text_name">Name</string>
    <string name="text_title">Title</string>
    <string name="text_phone">Phone</string>
    <string name="text_email">Email</string>
    <string name="text_twitterid">TwitterId</string>
    <string name="text_delete">Delete</string>
    <string name="text_edit">Edit</string>

</resources>
