<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <TextView
        android:id="@+id/item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:text="@string/text_name"
        android:textSize="25sp"
        android:textStyle="bold" />

    <View
        style="@style/HorizontalRule"
        android:layout_below="@id/item_name"/>

    <TextView
        android:id="@+id/item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_below="@id/item_name"
        android:text="@string/text_title"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/item_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/item_name"
        android:text="@string/text_phone"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/item_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_below="@id/item_phone"
        android:text="@string/text_email"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/item_twitterId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_below="@id/item_email"
        android:text="@string/text_twitterid"
        android:textSize="25sp" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:text="@string/text_delete"
        android:textAlignment="center" />
    <Button
        android:id="@+id/editButton"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:gravity="center_horizontal"
        android:text="@string/text_edit"
        android:textAlignment="center" />

</RelativeLayout>
